--- a/projects/12/test/Sys.vm
+++ b/projects/12/test/Sys.vm
@@ -16,6 +16,78 @@ pop temp 0
 push constant 0
 return
 function Sys.halt 0
+push constant 33
+call String.new 1
+push constant 115
+call String.appendChar 2
+push constant 121
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 104
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 108
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 119
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 104
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 102
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 108
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 112
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+call Output.println 0
+pop temp 0
 label WHILE_EXP0
 push constant 0
 not
@@ -26,57 +98,55 @@ label WHILE_END0
 push constant 0
 return
 function Sys.wait 1
-push argument 0
 push constant 0
-lt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push constant 1
-call Sys.error 1
-pop temp 0
-label IF_FALSE0
+pop local 0
 label WHILE_EXP0
+push local 0
+push constant 2
+call Math.multiply 2
+push constant 1
+call Math.divide 2
 push argument 0
-push constant 0
-gt
+lt
 not
 if-goto WHILE_END0
-push constant 50
-pop local 0
-label WHILE_EXP1
-push local 0
-push constant 0
-gt
-not
-if-goto WHILE_END1
 push local 0
 push constant 1
-sub
+add
 pop local 0
-goto WHILE_EXP1
-label WHILE_END1
-push argument 0
-push constant 1
-sub
-pop argument 0
 goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
 function Sys.error 0
-push constant 3
+push constant 10
 call String.new 1
-push constant 69
+push constant 101
 call String.appendChar 2
-push constant 82
+push constant 114
 call String.appendChar 2
-push constant 82
+push constant 114
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 67
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 100
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 61
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
 push argument 0
 call Output.printInt 1
+pop temp 0
+call Output.println 0
 pop temp 0
 call Sys.halt 0
 pop temp 0
