--- a/projects/12/test/Main.vm
+++ b/projects/12/test/Main.vm
@@ -1,15 +1,13 @@
 function Main.main 1
-push constant 8000
-pop local 0
-push constant 0
-push local 0
-add
-push constant 180
-push constant 6
-call Math.divide 2
+call PongGame.newInstance 0
 pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+call PongGame.getInstance 0
+pop local 0
+push local 0
+call PongGame.run 1
+pop temp 0
+push local 0
+call PongGame.dispose 1
+pop temp 0
 push constant 0
 return
