--- a/projects/12/Screen.vm
+++ b/projects/12/Screen.vm
@@ -163,6 +163,10 @@ push local 0
 push constant 0
 call Memory.poke 2
 pop temp 0
+push local 0
+push constant 1
+add
+pop local 0
 goto WHILE_EXP0
 label WHILE_END0
 push constant 0
@@ -181,6 +185,10 @@ push constant 1
 neg
 call Memory.poke 2
 pop temp 0
+push local 0
+push constant 1
+add
+pop local 0
 goto WHILE_EXP0
 label WHILE_END0
 push constant 0
