--- a/projects/12/test/Output.vm
+++ b/projects/12/test/Output.vm
@@ -1,26 +1,18 @@
 function Output.init 0
-push constant 16384
-pop static 4
 push constant 0
-not
-pop static 2
-push constant 32
 pop static 1
 push constant 0
-pop static 0
-push constant 6
-call String.new 1
-pop static 3
-call Output.initMap 0
+pop static 2
+call Screen.clearScreen 0
 pop temp 0
-call Output.createShiftedMap 0
+call Output.initMap 0
 pop temp 0
 push constant 0
 return
-function Output.initMap 0
+function Output.initMap 1
 push constant 127
 call Array.new 1
-pop static 5
+pop static 0
 push constant 0
 push constant 63
 push constant 63
@@ -1372,7 +1364,7 @@ push constant 11
 call Array.new 1
 pop local 0
 push argument 0
-push static 5
+push static 0
 add
 push local 0
 pop temp 0
@@ -1469,83 +1461,7 @@ push temp 0
 pop that 0
 push constant 0
 return
-function Output.createShiftedMap 4
-push constant 127
-call Array.new 1
-pop static 6
-push constant 0
-pop local 2
-label WHILE_EXP0
-push local 2
-push constant 127
-lt
-not
-if-goto WHILE_END0
-push local 2
-push static 5
-add
-pop pointer 1
-push that 0
-pop local 0
-push constant 11
-call Array.new 1
-pop local 1
-push local 2
-push static 6
-add
-push local 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
-push constant 0
-pop local 3
-label WHILE_EXP1
-push local 3
-push constant 11
-lt
-not
-if-goto WHILE_END1
-push local 3
-push local 1
-add
-push local 3
-push local 0
-add
-pop pointer 1
-push that 0
-push constant 256
-call Math.multiply 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
-push local 3
-push constant 1
-add
-pop local 3
-goto WHILE_EXP1
-label WHILE_END1
-push local 2
-push constant 0
-eq
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push constant 32
-pop local 2
-goto IF_END0
-label IF_FALSE0
-push local 2
-push constant 1
-add
-pop local 2
-label IF_END0
-goto WHILE_EXP0
-label WHILE_END0
-push constant 0
-return
-function Output.getMap 1
+function Output.getMap 0
 push argument 0
 push constant 32
 lt
@@ -1559,198 +1475,136 @@ label IF_TRUE0
 push constant 0
 pop argument 0
 label IF_FALSE0
-push static 2
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
 push argument 0
-push static 5
+push static 0
 add
 pop pointer 1
 push that 0
-pop local 0
-goto IF_END1
-label IF_FALSE1
-push argument 0
-push static 6
-add
-pop pointer 1
-push that 0
-pop local 0
-label IF_END1
-push local 0
 return
-function Output.drawChar 4
+function Output.moveCursor 0
+push argument 1
+pop static 2
 push argument 0
-call Output.getMap 1
-pop local 2
-push static 1
+pop static 1
+push constant 0
+return
+function Output.printChar 4
+push argument 0
+push static 0
+add
+pop pointer 1
+push that 0
 pop local 0
+push constant 0
+pop local 1
 label WHILE_EXP0
 push local 1
 push constant 11
 lt
 not
 if-goto WHILE_END0
+push constant 16384
+push static 1
+push constant 11
+call Math.multiply 2
+push local 1
+add
+push constant 32
+call Math.multiply 2
+add
 push static 2
+push constant 2
+call Math.divide 2
+add
+pop local 2
+push local 2
+call Memory.peek 1
+pop local 3
+push static 2
+push constant 1
+and
+push constant 0
+eq
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
+push local 2
+push local 3
+push constant 1
+neg
+push constant 255
+and
+and
+push local 1
 push local 0
-push static 4
+add
+pop pointer 1
+push that 0
+or
+call Memory.poke 2
+pop temp 0
+goto IF_END0
+label IF_FALSE0
+push local 2
+push local 3
+push constant 255
+and
+push local 1
+push local 0
 add
 pop pointer 1
 push that 0
 push constant 256
-neg
-and
-pop local 3
-goto IF_END0
-label IF_FALSE0
-push local 0
-push static 4
-add
-pop pointer 1
-push that 0
-push constant 255
-and
-pop local 3
-label IF_END0
-push local 0
-push static 4
-add
-push local 1
-push local 2
-add
-pop pointer 1
-push that 0
-push local 3
+call Math.multiply 2
 or
+call Memory.poke 2
 pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
-push local 0
-push constant 32
-add
-pop local 0
+label IF_END0
 push local 1
 push constant 1
 add
 pop local 1
 goto WHILE_EXP0
 label WHILE_END0
-push constant 0
-return
-function Output.moveCursor 0
-push argument 0
-push constant 0
-lt
-push argument 0
-push constant 22
-gt
-or
-push argument 1
-push constant 0
-lt
-or
-push argument 1
+push static 2
 push constant 63
-gt
-or
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push constant 20
-call Sys.error 1
-pop temp 0
-label IF_FALSE0
-push argument 1
-push constant 2
-call Math.divide 2
-pop static 0
-push constant 32
-push argument 0
-push constant 352
-call Math.multiply 2
-add
-push static 0
-add
-pop static 1
-push argument 1
-push static 0
-push constant 2
-call Math.multiply 2
-eq
-pop static 2
-push constant 32
-call Output.drawChar 1
-pop temp 0
-push constant 0
-return
-function Output.printChar 0
-push argument 0
-call String.newLine 0
-eq
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-call Output.println 0
-pop temp 0
-goto IF_END0
-label IF_FALSE0
-push argument 0
-call String.backSpace 0
 eq
 if-goto IF_TRUE1
 goto IF_FALSE1
 label IF_TRUE1
-call Output.backSpace 0
-pop temp 0
-goto IF_END1
-label IF_FALSE1
-push argument 0
-call Output.drawChar 1
-pop temp 0
-push static 2
-not
+push static 1
+push constant 22
+eq
 if-goto IF_TRUE2
 goto IF_FALSE2
 label IF_TRUE2
-push static 0
-push constant 1
-add
-pop static 0
+push constant 0
+pop static 1
+goto IF_END2
+label IF_FALSE2
 push static 1
 push constant 1
 add
 pop static 1
-label IF_FALSE2
-push static 0
-push constant 32
-eq
-if-goto IF_TRUE3
-goto IF_FALSE3
-label IF_TRUE3
-call Output.println 0
-pop temp 0
-goto IF_END3
-label IF_FALSE3
-push static 2
-not
+label IF_END2
+push constant 0
 pop static 2
-label IF_END3
+goto IF_END1
+label IF_FALSE1
+push static 2
+push constant 1
+add
+pop static 2
 label IF_END1
-label IF_END0
 push constant 0
 return
-function Output.printString 2
-push argument 0
-call String.length 1
-pop local 1
+function Output.printString 1
+push constant 0
+pop local 0
 label WHILE_EXP0
 push local 0
-push local 1
+push argument 0
+call String.length 1
 lt
 not
 if-goto WHILE_END0
@@ -1767,86 +1621,70 @@ goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
-function Output.printInt 0
-push static 3
+function Output.printInt 1
+push constant 6
+call String.new 1
+pop local 0
+push local 0
 push argument 0
 call String.setInt 2
 pop temp 0
-push static 3
+push local 0
 call Output.printString 1
+pop temp 0
+push local 0
+call String.dispose 1
 pop temp 0
 push constant 0
 return
 function Output.println 0
 push static 1
-push constant 352
-add
-push static 0
-sub
-pop static 1
-push constant 0
-pop static 0
-push constant 0
-not
-pop static 2
-push static 1
-push constant 8128
+push constant 22
 eq
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
-push constant 32
+call Screen.clearScreen 0
+pop temp 0
+push constant 0
 pop static 1
+goto IF_END0
 label IF_FALSE0
+push static 1
+push constant 1
+add
+pop static 1
+label IF_END0
+push constant 0
+pop static 2
 push constant 0
 return
 function Output.backSpace 0
 push static 2
+push constant 0
+eq
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
-push static 0
+push static 1
 push constant 0
 gt
 if-goto IF_TRUE1
 goto IF_FALSE1
 label IF_TRUE1
-push static 0
-push constant 1
-sub
-pop static 0
 push static 1
 push constant 1
 sub
 pop static 1
-goto IF_END1
-label IF_FALSE1
-push constant 31
-pop static 0
-push static 1
-push constant 32
-eq
-if-goto IF_TRUE2
-goto IF_FALSE2
-label IF_TRUE2
-push constant 8128
-pop static 1
-label IF_FALSE2
-push static 1
-push constant 321
-sub
-pop static 1
-label IF_END1
-push constant 0
+push constant 63
 pop static 2
+label IF_FALSE1
 goto IF_END0
 label IF_FALSE0
-push constant 0
-not
+push static 2
+push constant 1
+sub
 pop static 2
 label IF_END0
-push constant 32
-call Output.drawChar 1
-pop temp 0
 push constant 0
 return
